--- a/src/simulation/j2s6s300_sim_tests.ipynb
+++ b/src/simulation/j2s6s300_sim_tests.ipynb
@@ -120,24 +120,7 @@
       "ven = Intel\n",
       "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n",
       "ven = Intel\n",
-      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n",
-      "numActiveThreads = 0\n",
-      "stopping threads\n",
-      "Thread with taskId 0 exiting\n",
-      "Thread TERMINATED\n",
-      "destroy semaphore\n",
-      "semaphore destroyed\n",
-      "destroy main semaphore\n",
-      "main semaphore destroyed\n",
-      "finished\n",
-      "numActiveThreads = 0\n",
-      "btShutDownExampleBrowser stopping threads\n",
-      "Thread with taskId 0 exiting\n",
-      "Thread TERMINATED\n",
-      "destroy semaphore\n",
-      "semaphore destroyed\n",
-      "destroy main semaphore\n",
-      "main semaphore destroyed\n"
+      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n"
      ]
     }
    ],
@@ -312,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +388,7 @@
     "ARM_JOINTS = [2, 3, 4, 5, 6, 7]\n",
     "FINGER_JOINTS = [9, 10, 11, 12, 13, 14]\n",
     "HOME_POS = [math.pi, math.pi, math.pi/2, math.pi, math.pi/2, math.pi] #[math.pi] * len(ARM_JOINTS); Straight up\n",
-    "STATE_DURATIONS = [0.25, 1, 0.25, 0.25, 1, 0.25] \n",
+    "STATE_DURATIONS = [1, 1, 1, 1, 1, 1 ] #[0.25, 1, 0.25, 0.25, 1, 0.25] \n",
     "CONTROL_DT = 1. / 2**9.\n",
     "MAX_FINGER_POS = 1.5\n",
     "GRASP_FORCE = 50\n",
@@ -447,7 +430,7 @@
     "    for _ in range(num_object):\n",
     "        block_body.append(p.createMultiBody(baseMass=1.0, baseCollisionShapeIndex=block_shape))\n",
     "    \n",
-    "    x_min, x_max = 0.1, 0.55\n",
+    "    x_min, x_max = 0.15, 0.55\n",
     "    y_min, y_max = -0.45, 0.45\n",
     "    initial_x = np.random.uniform(x_min, x_max)\n",
     "    initial_y = np.random.uniform(y_min, y_max)\n",
@@ -473,7 +456,7 @@
     "    state_time = 0.\n",
     "\n",
     "    if sim_type == 1:\n",
-    "        x_min, x_max = 0.1, 0.55\n",
+    "        x_min, x_max = 0.15, 0.55\n",
     "        y_min, y_max = -0.45, 0.45\n",
     "        initial_x = np.random.uniform(x_min, x_max)\n",
     "        initial_y = np.random.uniform(y_min, y_max)\n",
@@ -735,66 +718,7 @@
       "stopping threads\n",
       "Thread with taskId 0 exiting\n",
       "destroy semaphore\n",
-      "semaphore destroyed\n",
       "Thread TERMINATED\n",
-      "destroy main semaphore\n",
-      "main semaphore destroyed\n",
-      "finished\n",
-      "numActiveThreads = 0\n",
-      "btShutDownExampleBrowser stopping threads\n",
-      "Thread with taskId 0 exiting\n",
-      "Thread TERMINATED\n",
-      "destroy semaphore\n",
-      "semaphore destroyed\n",
-      "destroy main semaphore\n",
-      "main semaphore destroyed\n",
-      "startThreads creating 1 threads.\n",
-      "starting thread 0\n",
-      "started thread 0 \n",
-      "argc=2\n",
-      "argv[0] = --unused\n",
-      "argv[1] = --start_demo_name=Physics Server\n",
-      "ExampleBrowserThreadFunc started\n",
-      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
-      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
-      "Creating context\n",
-      "Created GL 3.3 context\n",
-      "Direct GLX rendering context obtained\n",
-      "Making context current\n",
-      "GL_VENDOR=Intel\n",
-      "GL_RENDERER=Mesa Intel(R) UHD Graphics (CML GT2)\n",
-      "GL_VERSION=4.6 (Core Profile) Mesa 21.2.6\n",
-      "GL_SHADING_LANGUAGE_VERSION=4.60\n",
-      "pthread_getconcurrency()=0\n",
-      "Version = 4.6 (Core Profile) Mesa 21.2.6\n",
-      "Vendor = Intel\n",
-      "Renderer = Mesa Intel(R) UHD Graphics (CML GT2)\n",
-      "b3Printf: Selected demo: Physics Server\n",
-      "startThreads creating 1 threads.\n",
-      "starting thread 0\n",
-      "started thread 0 \n",
-      "MotionThreadFunc thread started\n",
-      "ven = Intel\n",
-      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n",
-      "ven = Intel\n",
-      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n",
-      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
-      "\n",
-      "b3Printf: No inertial data for link, using mass=1, localinertiadiagonal = 1,1,1, identity local inertial frame\n",
-      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
-      "\n",
-      "b3Printf: root\n",
-      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
-      "\n",
-      "b3Printf: No inertial data for link, using mass=1, localinertiadiagonal = 1,1,1, identity local inertial frame\n",
-      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
-      "\n",
-      "b3Printf: j2s6s300_end_effector\n",
-      "numActiveThreads = 0\n",
-      "stopping threads\n",
-      "Thread with taskId 0 exiting\n",
-      "Thread TERMINATED\n",
-      "destroy semaphore\n",
       "semaphore destroyed\n",
       "destroy main semaphore\n",
       "main semaphore destroyed\n",
@@ -855,6 +779,65 @@
       "Thread TERMINATED\n",
       "destroy semaphore\n",
       "semaphore destroyed\n",
+      "destroy main semaphore\n",
+      "main semaphore destroyed\n",
+      "finished\n",
+      "numActiveThreads = 0\n",
+      "btShutDownExampleBrowser stopping threads\n",
+      "Thread with taskId 0 exiting\n",
+      "Thread TERMINATED\n",
+      "destroy semaphore\n",
+      "semaphore destroyed\n",
+      "destroy main semaphore\n",
+      "main semaphore destroyed\n",
+      "startThreads creating 1 threads.\n",
+      "starting thread 0\n",
+      "started thread 0 \n",
+      "argc=2\n",
+      "argv[0] = --unused\n",
+      "argv[1] = --start_demo_name=Physics Server\n",
+      "ExampleBrowserThreadFunc started\n",
+      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
+      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
+      "Creating context\n",
+      "Created GL 3.3 context\n",
+      "Direct GLX rendering context obtained\n",
+      "Making context current\n",
+      "GL_VENDOR=Intel\n",
+      "GL_RENDERER=Mesa Intel(R) UHD Graphics (CML GT2)\n",
+      "GL_VERSION=4.6 (Core Profile) Mesa 21.2.6\n",
+      "GL_SHADING_LANGUAGE_VERSION=4.60\n",
+      "pthread_getconcurrency()=0\n",
+      "Version = 4.6 (Core Profile) Mesa 21.2.6\n",
+      "Vendor = Intel\n",
+      "Renderer = Mesa Intel(R) UHD Graphics (CML GT2)\n",
+      "b3Printf: Selected demo: Physics Server\n",
+      "startThreads creating 1 threads.\n",
+      "starting thread 0\n",
+      "started thread 0 \n",
+      "MotionThreadFunc thread started\n",
+      "ven = Intel\n",
+      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n",
+      "ven = Intel\n",
+      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
+      "\n",
+      "b3Printf: No inertial data for link, using mass=1, localinertiadiagonal = 1,1,1, identity local inertial frame\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
+      "\n",
+      "b3Printf: root\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
+      "\n",
+      "b3Printf: No inertial data for link, using mass=1, localinertiadiagonal = 1,1,1, identity local inertial frame\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
+      "\n",
+      "b3Printf: j2s6s300_end_effector\n",
+      "numActiveThreads = 0\n",
+      "stopping threads\n",
+      "Thread with taskId 0 exiting\n",
+      "destroy semaphore\n",
+      "semaphore destroyed\n",
+      "Thread TERMINATED\n",
       "destroy main semaphore\n",
       "main semaphore destroyed\n",
       "finished\n",
@@ -870,7 +853,7 @@
     }
    ],
    "source": [
-    "simulate(3, 3, 1, True)"
+    "simulate(3, 1, 0, True)"
    ]
   }
  ],
